--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
-        <activity android:name=".GridDisplayPage"></activity>
-        <activity android:name=".Gird_InputPage" />
+        <activity android:name=".PrevSolved"></activity>
+        <activity android:name=".ChoicePage" />
+        <activity android:name=".GridDisplayPage" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
