--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
-        <activity android:name=".PrevSolved"></activity>
+        <activity android:name=".DisplaySavedGrid"></activity>
+        <activity android:name=".PrevSolved" />
         <activity android:name=".ChoicePage" />
         <activity android:name=".GridDisplayPage" />
         <activity android:name=".MainActivity">
